force-app/main/default/objects/FEC_IPP_Schedule__c/FEC_IPP_Schedule__c.object-meta.xml
<CustomObject>
    <label>IPP Schedule</label>
    <nameField>
        <displayFormat>IPPSN - {0}</displayFormat>
        <label>IPP Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IPP Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>