force-app/main/default/objects/FEC_IPP_Schedule__c/fields/FEC_IPP__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP__c</fullName>
    <label>IPP</label>
    <referenceTo>FEC_IPP__c</referenceTo>
    <relationshipLabel>IPP Schedule</relationshipLabel>
    <relationshipName>IPP_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>