force-app/main/default/objects/FEC_IPP_Schedule__c/fields/FEC_IPP_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Payment_Amount__c</fullName>
    <label>IPP Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>