force-app/main/default/objects/FEC_IPP_Schedule__c/fields/FEC_IPP_Payment_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Payment_No__c</fullName>
    <label>IPP Payment No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>